--- a/_scss/frontpage.scss
+++ b/_scss/frontpage.scss
@@ -228,10 +228,12 @@
 	display: grid;
 	grid-template-columns: repeat(4, minmax(190px, 250px));
 	justify-content: center;
+	justify-self: center;
 	gap: clamp(3.2rem, 4.8vw, 6rem);
 	width: min(100%, 1700px);
 	margin: clamp(2rem, 3.8vw, 3.8rem) auto 0;
 	padding: clamp(1.2rem, 2.2vw, 2rem) clamp(0.2rem, 0.8vw, 0.7rem) clamp(2.1rem, 3.2vw, 3.3rem);
+	box-sizing: border-box;
 }
 
 .frontpage-feature-pill {
