--- a/_scss/pages.scss
+++ b/_scss/pages.scss
@@ -80,6 +80,17 @@
 	margin-top: 0;
 }
 
+@media (max-width: 780px) {
+	.download-hub-links {
+		grid-template-columns: 1fr;
+		align-items: stretch;
+	}
+
+	.download-hub-links .page-action-list {
+		width: 100%;
+	}
+}
+
 .donate-hub-panel {
 	margin-top: clamp(2.2rem, 3.6vw, 2.8rem);
 }
